<resources>
    <string name="app_name">KeyChain</string>
    <string name="search_hint">Find your key…</string>
    <string name="action_settings">Settings</string>
    <string name="login_default_status">Identify please</string>
    <string name="prompt_id_name">ID Name:</string>
    <string name="prompt_user">User:</string>
    <string name="hint_optional">optional</string>
    <string name="prompt_brief">Brief:</string>
    <string name="button_generate_key">Generate key</string>
    <string name="prompt_configuration">Configuration</string>
    <string name="prompt_key_length">Key Length:</string>
    <string name="prompt_key_type">Key Type:</string>
    <string name="prompt_information">Information</string>
    <string name="prompt_key">Key:</string>
    <string name="button_copy_key">Copy</string>
    <string name="button_back">back</string>
    <string name="button_update_key">update</string>
    <string name="button_update_fields">update fields</string>
    <string name="button_update_fields_key">update key and fields</string>
    <string-array name="spinner_length_array">
        <item>8 chars</item>
        <item>12 chars</item>
        <item>16 chars</item>
        <item>24 chars</item>
        <item>32 chars</item>
    </string-array>
    <string-array name="spinner_types_array">
        <item>Only characters</item>
        <item>Only numbers</item>
        <item>Only symbols</item>
        <item>Characters and numbers</item>
        <item>Characters and symbols</item>
        <item>Numbers and symbols</item>
        <item>Everything</item>
    </string-array>
</resources>
