<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp">

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight=".1"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".35"
            android:text="@string/prompt_id_name"
            android:textSize="16sp"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/textView_idName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_weight="1"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight=".1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp">

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight=".1"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".35"
            android:textSize="16sp"
            android:text="@string/prompt_user"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/textView_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_weight="1"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight=".1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp">

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight=".1"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".35"
            android:textSize="16sp"
            android:text="@string/prompt_brief"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/textView_brief"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight=".1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight=".13"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:layout_gravity="center_vertical"
            android:text="@string/prompt_key"
            android:textSize="16sp"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/textView_key"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btCopyKey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:layout_marginEnd="6dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorAccent"
            android:text="@string/button_copy_key"/>

    </LinearLayout>

</LinearLayout>